--- a/index.html
+++ b/index.html
@@ -11,18 +11,70 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <!-- Font Awesome  -->
+   
+   <script src="https://kit.fontawesome.com/4f98352192.js" crossorigin="anonymous"></script>
+
   <style>
     .manrope-font{
   font-family: "Manrope", sans-serif;
     }
+    .boder{
+      border: 5px solid red;
+    }
 
   </style>
 
+
 </head>
-<body class="manrope-font"> 
+<body class="manrope-font bg-gradient-to-r from-gray-50 to-gray-100"> 
    <!-- Header Section -->
-    <header>
-  <h1>Md Yeasir Hosen</h1>
+    <header class=" container mx-auto "  >
+      <!-- navbar -->
+      <div class="navbar bg-base-100 bg-gradient-to-r from-gray-50 to-gray-100">
+        <div class="navbar-start"> 
+          
+          <a class="btn btn btn-ghost font-black border-hidden  text-xl font-extrabold"> <i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] rounded-full m-0 w-10 h-10 items-center p-3"></i>  Rinterio</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a class="text-black">Home</a></li>
+            <li><a class="text-[#737373]">Services</a></li>
+            <li><a class="text-[#737373]">Portfolio</a></li>
+            <li><a class="text-[#737373]">Blogs</a></li>
+            <li><a class="text-[#737373]">Contact Us</a></li>
+          </ul> 
+        </div>
+        <div class="navbar-end hidden lg:flex">
+          <i class="fa-solid fa-magnifying-glass mr-5 bg-white rounded-[100px]  items-center p-3"></i>
+                    <i class="fa-solid fa-cart-shopping mr-10 bg-white rounded-[100px]  items-center p-3  "></i>
+                  <a class="btn bg-[#ABEF5F] rounded-[32px] -ml-5 px-[30px] py-[25px] content-center   " > Book Consult <i class="fa-solid fa-arrow-right -rotate-45 bg-black text-white rounded-full m-0 w-10 h-10 items-center p-3  "></i> </a>
+        </div>
+        <div class="dropdown lg:hidden ml-40 items-center"> 
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            class="inline-block h-5 w-5 stroke-current">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+          </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-40 p-3 shadow"> 
+            <li><a class="text-black">Home</a></li>
+          <li><a class="text-[#737373]">Services</a></li>
+          <li><a class="text-[#737373]">Portfolio</a></li>
+          <li><a class="text-[#737373]">Blogs</a></li>
+          <li><a class="text-[#737373]">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
     <!-- Main Section -->
      <main></main>
