complete header bannar section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <ul
             tabindex="0"
-            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-40 p-3 shadow"> 
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-40 p-3 shadow hidden "> 
             <li><a class="text-black">Home</a></li>
           <li><a class="text-[#737373]">Services</a></li>
           <li><a class="text-[#737373]">Portfolio</a></li>
@@ -75,6 +75,21 @@
           </ul>
         </div>
       </div>
+      <!-- banner part -->
+       <!-- banner img section -->
+        <div class="banner-section   ">
+          <section> 
+            <img class=" mx-auto" src="./assets/banner.png" alt="">
+          </section>
+          <!-- banner text-section -->
+          <section class=" "> 
+            <h1 class="text-center text-6xl font-extrabold text-black mb-8 sm:[text-xl]">A barn house of this design has a <br> striking appearance</h1>
+            <p class="text-center mb-8 font-extralight">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal <br> accents, and large windows that flood the space with natural light.</p>
+            <button class= "mx-auto flex  items-center bg-gradient-to-r from-[#bcf37e] to-[#cbf29e] ... px-4 py-1 rounded-[32px]    "> <a class="font-bold" href="#">View Details</a> <i class="fa-solid fa-arrow-right -rotate-45 bg-[#ABEF5F] rounded-full m-0 w-10 h-10 items-center p-3"></i> </button>
+  
+          </section> 
+        </div>
+        
     </header>
     <!-- Main Section -->
      <main></main>
