final review added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Main Section -->
      <main class=" bg-[#E9E9E9] " >
       <!-- About Section -->
-      <img class="mt-10 ml-5 mb-7" src="./assets/Vector.png" alt="">
+      <img class=" mt-10 ml-6 mb-10 w-fit" src="./assets/Vector.png" alt="">
         <div class="about grid grid-cols-1 lg:grid-cols-2 container mx-auto   ">
           <div class="content ml-10">           
             <button class="btn bg-white mb-10 px-7 rounded-3xl" ><i class="fa-solid fa-arrow-right"></i> About Us</button>
@@ -477,20 +477,18 @@
   </div>
   
   <nav class="grid lg:grid-flow-col md:grid-flow-col gap-5 lg:space-x-24 md:space-x-20  text-base text-stone-400 pb-3">
-    <a>Home</a>
-    <a>Services</a>
-    <a>Portfolio</a>
-    <a>Blogs</a>
-    <a>Contact Us</a>
+    <a href="#">Home</a> 
+    <a href="#">Services</a> 
+    <a href="#">Portfolio</a> 
+    <a href="#">Blogs</a> 
+    <a href="#">Contact Us</a>
   </nav>
   <button class="flex btn border-none  bg-[#ABEF5F] text-lg font-extrabold rounded-full text-black px-10">
     Book Consult
     <div class="Logo gap-2">
-  
     <i class="-rotate-45 w-8 h-8 pt-0.5 rounded-full text-center bg-black text-white text-lg fa-solid fa-arrow-right"></i>
   </div>
   </button>
-
       </footer>
 </body>
 </html>
